src/static/css/espera.css
.table th,
.table td {
  vertical-align: middle;
  font: normal 900 1.2rem var(--font-principal), monospace;
}
th {
  background-color: var(--azul-base);
}
td {
  border-bottom: 0.1rem solid var(--laranja-queimado) !important; /*sobrescreve o estilo do bootstrap*/
}
@media screen and (max-width: 390px) {
  .table th,
  .table td {
    font: normal 900 0.8rem var(--font-principal), monospace;
  }
}

.nav-espera {
  width: 100%;
  height: 7.5vh;

  display: flex;
  justify-content: space-between;
  align-items: center;

  background-color: var(--azul-base);

  padding: 20px;
}

.nav-espera h1 {
  font-size: 1.5rem;
  margin-bottom: 0;
  line-height: 1;
  font-weight: 800;
}

#open_Modal_Button,
#btn_enviar {
  background-color: var(--off-white);
  color: var(--azul-base);
  border: none;
  font: normal 1000 1.15rem var(--font-principal), monospace;

  width: 12.5vw;
  height: 5vh;

  border-radius: 12px;
}

#btn_enviar:hover {
  background-color: var(--off-white-cinza);
}

h1 {
  font: normal 1000 1.4rem var(--font-principal), monospace;
  color: var(--off-white);

  display: flex;
  justify-content: center;
  align-items: center;
}

.informacoes {
  font: normal 900 1.3rem var(--font-principal), monospace;

  display: flex;
  justify-content: space-between;
  align-items: center;

  padding: 1rem 10px;
}

.informacoes p {
  margin-bottom: 0;
}

.dados_aluno {
  background-color: var(--off-white-cinza);

  display: flex;
  align-items: center;
  justify-content: space-between;
  text-align: center;

  height: 5vh;

  padding: 0.5rem 10px;
  box-sizing: content-box;
}

.dados_aluno_branco {
  background-color: white;
}

.dados_aluno p {
  margin-bottom: 0;
}

.coluna_motivo {
  word-break: break-all;
}

p {
  font: normal 900 1.3rem var(--font-principal), monospace;
}

